[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Extensions/Recorder/Dialog/Dialog.gd" type="Script" id=1]

[node name="Recorder" type="WindowDialog"]
margin_right = 350.0
margin_bottom = 210.0
rect_min_size = Vector2( 350, 210 )
window_title = "Recorder"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" groups=["visible during recording"]]
margin_top = 24.0
margin_right = 350.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" groups=["visible during recording"]]
margin_top = 32.0
margin_right = 350.0
margin_bottom = 64.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 32.0

[node name="Info" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 230.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="CapturedLabel" type="Label" parent="VBoxContainer/HBoxContainer/Info"]
margin_right = 222.0
margin_bottom = 14.0
text = "Images Captured"
align = 1
valign = 1
clip_text = true

[node name="Captured" type="Label" parent="VBoxContainer/HBoxContainer/Info"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 234.0
margin_right = 238.0
margin_bottom = 32.0

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 350.0
margin_bottom = 32.0
disabled = true
toggle_mode = true
text = "Start Recording"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" groups=["visible during recording"]]
margin_top = 68.0
margin_right = 350.0
margin_bottom = 72.0

[node name="TargetProject" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 350.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="VBoxContainer/TargetProject"]
margin_top = 3.0
margin_right = 146.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Target Project : "
align = 2

[node name="TargetProjectOption" type="OptionButton" parent="VBoxContainer/TargetProject"]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
clip_text = true
align = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 350.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" groups=["visible during recording"]]
margin_top = 114.0
margin_right = 350.0
margin_bottom = 130.0
scroll_vertical_enabled = false

[node name="RecordScreen" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 350.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Canvas" type="Label" parent="VBoxContainer/ScrollContainer/RecordScreen"]
margin_top = 1.0
margin_right = 117.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Record canvas?"
align = 2

[node name="Mode" type="HSlider" parent="VBoxContainer/ScrollContainer/RecordScreen"]
margin_left = 121.0
margin_right = 221.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0

[node name="Pixelorama" type="Label" parent="VBoxContainer/ScrollContainer/RecordScreen"]
margin_left = 225.0
margin_top = 1.0
margin_right = 350.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Record Pixelorama?"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 350.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="Destination" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 350.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 40 )

[node name="Path" type="LineEdit" parent="VBoxContainer/Destination"]
margin_right = 287.0
margin_bottom = 40.0
size_flags_horizontal = 3
align = 1
editable = false
placeholder_text = "Choose Destination --->"

[node name="Choose" type="Button" parent="VBoxContainer/Destination"]
margin_left = 291.0
margin_right = 350.0
margin_bottom = 40.0
text = "Choose"

[node name="Path" type="FileDialog" parent="."]
margin_right = 445.0
margin_bottom = 290.0
rect_min_size = Vector2( 315, 290 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/home/variable/Documents/Godot/Godot projects/Recorder"
current_path = "/home/variable/Documents/Godot/Godot projects/Recorder/"

[node name="Timer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_Recorder_visibility_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_toggled"]
[connection signal="item_selected" from="VBoxContainer/TargetProject/TargetProjectOption" to="." method="_on_TargetProjectOption_item_selected"]
[connection signal="pressed" from="VBoxContainer/TargetProject/TargetProjectOption" to="." method="_on_TargetProjectOption_pressed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/RecordScreen/Mode" to="." method="_on_Mode_value_changed"]
[connection signal="pressed" from="VBoxContainer/Destination/Choose" to="." method="_on_Choose_pressed"]
[connection signal="dir_selected" from="Path" to="." method="_on_Path_dir_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
